<resources>
    <string name="app_name">TicketPro APP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu admin-->
    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="ResgistrarAdmin">Registrar</string>
    <string name="ListarAdmin">Mis Eventos</string>
    <string name="Salir">Cerrar session</string>

    <!--Menu Cliente-->
    <string name="Opcionestxt">Opciones</string>
    <string name="InicioCliente">Inicio</string>
    <string name="MasOpcionestxt">Mas Opciones</string>
    <string name="AcercaDe">Acerca De Ticket Pro App</string>
    <string name="Compartir">Compatir</string>
    <string name="Acceder">Acceder</string>
    <string name="Registrate">Registrate Hoy</string>

    <!--registrar admin-->
    <string name="RegistroTXT">Registro de Usuario</string>
    <string name="Correo">Correo Electronico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombres">Nombres Completos</string>
    <string name="Apellidos">Apellidos Completos</string>
    <string name="Cedula">Numero de Cedula</string>
    <string name="FechaRegistro">Fecha de Registro</string>
    <string name="Registrar">Registrar</string>

    <!--login administradores-->
    <string name="LoginTXT">Login</string>
    <string name="Ingresar">Ingresar</string>

    <!--Perfil-->
    <string name="PERFILADMINISTRADORTXT">MI PERFIL</string>
    <string name="MIINFORMACIONTXT">MI INFORMACION</string>
    <string name="UIDPERFILTXT">UID:</string>
    <string name="UIDPERFIL"> -- </string>
    <string name="NOMBRESPERFILTXT">Nombres: </string>
    <string name="NOMBRESPERFIL"> -- </string>
    <string name="APELLIDOSPERFILTXT">Apellidos: </string>
    <string name="APELLIDOSPERFIL"> -- </string>
    <string name="CORREOPERFILTXT">Correo: </string>
    <string name="CORREOPERFIL"> -- </string>
    <string name="PASSWORDPERFILTXT">Password: </string>
    <string name="PASSWORDPERFIL"> -- </string>
    <string name="CEDULAPERFILTXT">Cedula: </string>
    <string name="CEDULAPERFIL"> -- </string>
    <string name="ACTUALIZARPASS">Actualizar Password</string>
    <string name="ACTUALIZARDATOS">Actualizar Datos</string>

    <!---->
    <string name="CategoriasTXT">Estas son nuestras Categorias de Eventos</string>
    <string name="Plan">¿Que vamos a hacer hoy?</string>
    <string name="NombreCategoriaF"> -- </string>
    <string name="allEvents">Todos los eventos</string>
    <string name="clienteS">--</string>

    <string name="NombreEvento"> -- </string>
    <string name="PrecioEvento"> -- </string>
    <string name="filtrado"> -- </string>

    <string name="NombreImagenTXT">Nombre de imagen</string>
    <string name="NombreEventoDetalleTXT"> -- </string>
    <string name="VisualizacionTXT">Visualizaciones</string>
    <string name="direcccionTXT"> -- </string>
    <string name="fechaTXT"> -- </string>
    <string name="precioTXT"> -- </string>

    <!-- Compra-->
    <string name="ActivityBoletos">Compra de Boletos</string>
    <string name="NumeroBoletos">Numero de Boletos</string>
    <string name="Adicion">+</string>
    <string name="Sustraccion">-</string>
    <string name="Compra">Comprar </string>
    <string name="CodigoAcceso">Codigo de Acceso</string>
    <string name="CodigoMensaje">NOTA: \nCon el siguiente Codigo QR, puedes ingresar al evento</string>
    <string name="GuardarImagen">Guardar QR</string>
    <string name="DetalleCompra">Detalle de Compra</string>
    <string name="valorunitario">Valor Unitario:</string>
    <string name="cantidad">N° de Entradas:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="totalcosto">Total a pagar:</string>
    <string name="numUnitario">0</string>
    <string name="numCantidad">0</string>
    <string name="numSubtotal">0</string>
    <string name="numTotal">0</string>
    <string name="tiuloCompra">Finalizar Compra</string>

    <string name="dFinalizarcompra">Porfavor transfiera o deposite el total a pagar a la siguiente cuenta para completar tu compra.\nGRACIAS</string>
    <string name="descripcionCuenta">Cuenta Corriente: 22661456745\n
                Nombre: Ticket Pro\n
                RUC: 1751568682001\n
                Una vez que confirmes la transferencia se te acreditaran directamente tus entradas en un lapso de 24 horas.</string>

    <!--CAMBIAR DE CONTRASEÃ‘A-->
    <string name="MisCredencialesTXT">Mis Credenciales</string>
    <string name="PassActualTXT">Contraseña actual: </string>
    <string name="PassActual"> -- </string>
    <string name="ActualPassET"> Contraseña Actual </string>
    <string name="NuevoPassET"> Nueva Contraseña</string>
    <string name="CAMBIARPASSBTN">CAMBIAR CONTRASEÑA</string>
    <string name="IRINICIOBTN">IR INICIO</string>
    <string name="NOTATXT">Nota: Si cambia la contraseña , se cerrara sesion automaticamente</string>

    <string name="NombresEVENTO"> Evento: </string>
    <string name="TiempoRestante"> Tiempo Restante: </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Informacion App-->
    <string name="AcercaDetalle"> ACERCA DE TICKET PRO APP</string>
    <string name="Universidad">Universidad Central del Ecuador</string>
    <string name="Facu">Facultad de Ingenieria y Ciencias Aplicadas</string>
    <string name="Materia">Materia: Dispositivos Moviles</string>
    <string name="tutor">Turor: Ing. Bayron Fabricio Torres </string>
    <string name="version">Version: 1.0.0</string>
    <string name="DesarrolladoD"> DESARROLLADORES </string>
    <string name="NombreD">David Alberto Anrango Castillo</string>
    <string name="CorreoD">daanrango@uce.edu.ec</string>
    <string name="ir_facebook">Facebook</string>
    <string name="ir_what">WhatsApp</string>
    <string name="NombreS">Santiago Javier Castro Heredia</string>
    <string name="CorreoS">sjcastro@uce.edu.ec</string>
    <string name="ir_facebookS">Facebook</string>
    <string name="ir_whatS">WhatsApp</string>

    <!--Conexxion-->
    <string name="conexxion">Lo sentimos surgio un problema. Revisa tu conexion a Internt. Porfavor!</string>
    <!--Descarga QR-->
    <string name="Descargaexitosa">DECARGA EXITOSA</string>
    <string name="guardaEn">Guardado en la Galeria</string>
    <string name="okDescarga">OK</string>

    <!--ComparteApp-->
    <string name="ComparteEstaApp"> Te agradeceriamos mucho si nos ayudas a crecer. Porfavor comparte esta AppCon tus amigos</string>
    <string name="BtnCompartitr"> Compartir Ahora</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>