<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FragmentosAdministrador.PerfilAdmin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/PERFILADMINISTRADORTXT"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/FOTOPERFILIMG"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/perfil"/>

        <TextView
            android:text="@string/MIINFORMACIONTXT"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/UIDPERFILTXT"
                android:text="@string/UIDPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/UIDPERFIL"
                android:text="@string/UIDPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/NOMBRESPERFILTXT"
                android:text="@string/NOMBRESPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/NOMBRESPERFIL"
                android:text="@string/NOMBRESPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/APELLIDOSPERFILTXT"
                android:text="@string/APELLIDOSPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/APELLIDOSPERFIL"
                android:text="@string/APELLIDOSPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CORREOPERFILTXT"
                android:text="@string/CORREOPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/CORREOPERFIL"
                android:text="@string/CORREOPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PASSWORDPERFILTXT"
                android:text="@string/PASSWORDPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/PASSWORDPERFIL"
                android:text="@string/PASSWORDPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CEDULAPERFILTXT"
                android:text="@string/CEDULAPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/CEDULAPERFIL"
                android:text="@string/CEDULAPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/ACTUALIZARPASS"
            android:text="@string/ACTUALIZARPASS"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/edit_icon"
            android:layout_gravity="center"
            android:padding="10dp"
            android:drawablePadding="15dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_width="230dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/ACTUALIZARDATOS"
            android:text="@string/ACTUALIZARDATOS"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/edit_icon"
            android:layout_gravity="center"
            android:padding="10dp"
            android:drawablePadding="15dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_width="230dp"
            android:layout_height="wrap_content"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>