<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#D5D8DC"
    tools:context=".FragmentosAdministrador.RegistrarAdmin">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:text="@string/RegistroTXT"
            android:gravity="center"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/FechaRegistro"
                android:text="@string/FechaRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendario_icon"
                android:paddingStart="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/profile"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/Correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nombres"
                android:inputType="textCapWords|textAutoCorrect"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Apellidos"
                android:inputType="textCapWords|textAutoCorrect"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Cedula"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/Registrar"
            android:background="@color/colorPrimary"
            android:text="@string/Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>