<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".InicioSesion">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/LoginTXT"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="login_animation.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/Correo"
                android:layout_width="match_parent"

                android:drawablePadding="5dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/person_ico"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/key_ico"
                android:drawablePadding="5dp"
                android:hint="@string/Password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Acceder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/Acceder"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/RegistrateL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorSecundary"
            android:text="@string/Registrate"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>